# AoC

./: init.sh  package-lock.json  package.json  problem17.txt  runProblem.js  utils.js
2016/: package-lock.json  package.json  problem1.js  problem10.js  problem10input.js  problem11.js  problem12.js  problem12input.js  problem13.js  problem14.js  problem14Check.js  problem2.js  problem3.js  problem3Input.js  problem4.js  problem4Input.js  problem5.js  problem6.js  problem6input.js  problem7.js  problem7input.js  problem8.js  problem8input.js  problem9.js  problem9input.js
2017/: bfsTest.js  longDays.js  package-lock.json  package.json
2017/21/: blockUtils.js  index.js  input.js
2017/22/: index.js  input.js  virus.js
2017/23/: index.js  input.js  primes.js
2017/24/: Magnent.js  index.js  input.js
2017/25/: index.js  mproc.js
2017/eight/: index.js  input.js
2018/: Map.js
2019/: intCode.js  intCodeGen.js
2020/: bootCode.js  dfs.js  package.json  utils.js
2022/: Cargo.toml  start.sh
2022_rust/: Cargo.toml
2022_rust/src/: grid.rs  lib.rs  search.rs  utils.rs
2022_rust/src/inputs/: d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d8.rs  d9.rs  mod.rs
2022_rust/src/utils/: mod.rs  strings.rs
2024_rust/: Cargo.toml  build.sh
2024_rust/src/: lib.rs  print.rs  search.rs
2024_rust/src/inputs/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
bfs/: index.js
(+296 files in other folders)
