[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1.16"
priority-queue = "1.3"
num = "0.4"
enum-map = "2.4.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
fraction = "0.12.2"

[lib]
name = "lib"
path = "src/lib.rs"
