[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
num = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
priority-queue = "2.1.1"
rayon = "1.10.0"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
subenum = "1.1.2"
timelog = "1.0.5"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
name = "lib"
path = "src/lib.rs"
